--- a/source/data-inspection/src/main/resources/persistence-db-config.yaml
+++ b/source/data-inspection/src/main/resources/persistence-db-config.yaml
@@ -1,11 +1,11 @@
 spring:
   datasource:
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    jdbc-url: jdbc:oracle:thin:@172.17.241.246:5211:TSID
-    username: ENC(s5IFxjJ3zOoJQXtFnqePwwnfAu5B/3sf)
-    password: ENC(cxWqr5ExAvvE4aRwx8pHHOTSBj98Ouko)
+    jdbc-url: jdbc:oracle:thin:@10.3.0.73:1521:devzxsm
+    username: ENC(MUuq6j1C0gJqVZE85gbOJR2fXd2jbnBn)
+    password: ENC(KvVLNNJRp0sc26tfUXPhhKOms3H278XO)
 
 
   hive-datasource:
     driver-class-name: org.apache.hive.jdbc.HiveDriver
-    jdbc-url: jdbc:hive2://tpebnkbdpwh01t:2181,tpebnkbdpwh02t:2181,tpebnkbdpwh03t:2181/default;password=bdpadmin;principal=hive/_HOST@BDP.FBT.COM;serviceDiscoveryMode=zooKeeper;user=bdpadmin;zooKeeperNamespace=hiveserver2;
+    jdbc-url: jdbc:hive2://10.4.0.25:10000/default;principal=hive/_HOST@KDC.COM;
